// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArraySchema denormalization Class denormalizes a single entity 1`] = `
Array [
  Array [
    Cat {
      "id": "1",
      "name": "Milo",
    },
    Cat {
      "id": "2",
      "name": "Jake",
    },
  ],
  true,
  true,
]
`;

exports[`ArraySchema denormalization Class denormalizes a single entity 2`] = `
Array [
  Array [
    Cat {
      "id": "1",
      "name": "Milo",
    },
    Cat {
      "id": "2",
      "name": "Jake",
    },
  ],
  true,
  true,
]
`;

exports[`ArraySchema denormalization Class denormalizes multiple entities 1`] = `
Array [
  Array [
    Cat {
      "id": "123",
      "type": "Cat",
    },
    Person {
      "id": "123",
      "type": "people",
    },
    Object {
      "id": "789",
    },
    Cat {
      "id": "456",
      "type": "Cat",
    },
  ],
  true,
  true,
]
`;

exports[`ArraySchema denormalization Class denormalizes multiple entities 2`] = `
Array [
  Array [
    Cat {
      "id": "123",
      "type": "Cat",
    },
    Person {
      "id": "123",
      "type": "people",
    },
    Object {
      "id": "789",
    },
    Cat {
      "id": "456",
      "type": "Cat",
    },
  ],
  true,
  true,
]
`;

exports[`ArraySchema denormalization Class denormalizes nested in object 1`] = `
Array [
  Object {
    "results": Array [
      Cat {
        "id": "1",
        "name": "Milo",
      },
      Cat {
        "id": "2",
        "name": "Jake",
      },
    ],
  },
  true,
  true,
]
`;

exports[`ArraySchema denormalization Class denormalizes nested in object 2`] = `
Array [
  Object {
    "results": Array [
      Cat {
        "id": "1",
        "name": "Milo",
      },
      Cat {
        "id": "2",
        "name": "Jake",
      },
    ],
  },
  true,
  true,
]
`;

exports[`ArraySchema denormalization Class denormalizes nested in object with primitive 1`] = `
Object {
  "results": Array [
    Cat {
      "id": "1",
      "name": "Milo",
    },
    Cat {
      "id": "2",
      "name": "Jake",
    },
  ],
}
`;

exports[`ArraySchema denormalization Class denormalizes nested in object with primitive 2`] = `
Object {
  "results": Array [
    Cat {
      "id": "1",
      "name": "Milo",
    },
    Cat {
      "id": "2",
      "name": "Jake",
    },
  ],
}
`;

exports[`ArraySchema denormalization Class denormalizes plain arrays with nothing inside 1`] = `
Array [
  Object {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  true,
]
`;

exports[`ArraySchema denormalization Class denormalizes plain arrays with nothing inside 2`] = `
Array [
  Object {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  true,
]
`;

exports[`ArraySchema denormalization Class denormalizes plain arrays with nothing inside 3`] = `
Array [
  Immutable.Map {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  true,
]
`;

exports[`ArraySchema denormalization Class denormalizes plain arrays with nothing inside 4`] = `
Array [
  Object {
    "tacos": Array [],
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  true,
]
`;

exports[`ArraySchema denormalization Class denormalizes plain arrays with nothing inside 5`] = `
Array [
  Object {
    "tacos": Array [],
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  true,
]
`;

exports[`ArraySchema denormalization Class denormalizes plain arrays with nothing inside 6`] = `
Array [
  Immutable.Map {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
    "tacos": Immutable.List [],
  },
  true,
  true,
]
`;

exports[`ArraySchema denormalization Class denormalizes plain arrays with plain object inside 1`] = `
Array [
  Object {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  true,
]
`;

exports[`ArraySchema denormalization Class denormalizes plain arrays with plain object inside 2`] = `
Array [
  Object {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  true,
]
`;

exports[`ArraySchema denormalization Class denormalizes plain arrays with plain object inside 3`] = `
Array [
  Immutable.Map {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  true,
]
`;

exports[`ArraySchema denormalization Class denormalizes plain arrays with plain object inside 4`] = `
Array [
  Object {
    "tacos": Array [],
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  true,
]
`;

exports[`ArraySchema denormalization Class denormalizes plain arrays with plain object inside 5`] = `
Array [
  Object {
    "tacos": Array [],
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  true,
]
`;

exports[`ArraySchema denormalization Class denormalizes plain arrays with plain object inside 6`] = `
Array [
  Immutable.Map {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
    "tacos": Immutable.List [],
  },
  true,
  true,
]
`;

exports[`ArraySchema denormalization Class denormalizes should not be found when result array is undefined 1`] = `
Object {
  "results": undefined,
}
`;

exports[`ArraySchema denormalization Class denormalizes should not be found when result array is undefined 2`] = `
Object {
  "results": undefined,
}
`;

exports[`ArraySchema denormalization Class denormalizes with missing entity should have true second value 1`] = `
Array [
  Array [
    Cat {
      "id": "1",
      "name": "Milo",
    },
    Cat {
      "id": "2",
      "name": "Jake",
    },
  ],
  true,
  true,
]
`;

exports[`ArraySchema denormalization Class denormalizes with missing entity should have true second value 2`] = `
Array [
  Array [
    Cat {
      "id": "1",
      "name": "Milo",
    },
    Cat {
      "id": "2",
      "name": "Jake",
    },
  ],
  true,
  true,
]
`;

exports[`ArraySchema denormalization Class does not assume mapping of schema to attribute values when schemaAttribute is not set 1`] = `
Object {
  "entities": Object {
    "Cat": Object {
      "1": Cat {
        "id": "1",
      },
      "2": Cat {
        "id": "2",
      },
    },
  },
  "indexes": Object {},
  "result": Array [
    Object {
      "cat": "1",
      "id": "5",
    },
    Object {
      "cat": "2",
      "id": "6",
    },
  ],
}
`;

exports[`ArraySchema denormalization Class returns the input value if is not an array 1`] = `
Array [
  Taco {
    "fillings": Object {},
    "id": "123",
  },
  true,
  true,
]
`;

exports[`ArraySchema denormalization Class returns the input value if is not an array 2`] = `
Array [
  Taco {
    "fillings": Immutable.Map {},
    "id": "123",
  },
  true,
  true,
]
`;

exports[`ArraySchema denormalization Object denormalizes a single entity 1`] = `
Array [
  Array [
    Cat {
      "id": "1",
      "name": "Milo",
    },
    Cat {
      "id": "2",
      "name": "Jake",
    },
  ],
  true,
  true,
]
`;

exports[`ArraySchema denormalization Object denormalizes a single entity 2`] = `
Array [
  Array [
    Cat {
      "id": "1",
      "name": "Milo",
    },
    Cat {
      "id": "2",
      "name": "Jake",
    },
  ],
  true,
  true,
]
`;

exports[`ArraySchema denormalization Object denormalizes nested in object 1`] = `
Array [
  Object {
    "results": Array [
      Cat {
        "id": "1",
        "name": "Milo",
      },
      Cat {
        "id": "2",
        "name": "Jake",
      },
    ],
  },
  true,
  true,
]
`;

exports[`ArraySchema denormalization Object denormalizes nested in object 2`] = `
Array [
  Object {
    "results": Array [
      Cat {
        "id": "1",
        "name": "Milo",
      },
      Cat {
        "id": "2",
        "name": "Jake",
      },
    ],
  },
  true,
  true,
]
`;

exports[`ArraySchema denormalization Object denormalizes nested in object with primitive 1`] = `
Object {
  "results": Array [
    Cat {
      "id": "1",
      "name": "Milo",
    },
    Cat {
      "id": "2",
      "name": "Jake",
    },
  ],
}
`;

exports[`ArraySchema denormalization Object denormalizes nested in object with primitive 2`] = `
Object {
  "results": Array [
    Cat {
      "id": "1",
      "name": "Milo",
    },
    Cat {
      "id": "2",
      "name": "Jake",
    },
  ],
}
`;

exports[`ArraySchema denormalization Object denormalizes plain arrays with nothing inside 1`] = `
Array [
  Object {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  true,
]
`;

exports[`ArraySchema denormalization Object denormalizes plain arrays with nothing inside 2`] = `
Array [
  Object {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  true,
]
`;

exports[`ArraySchema denormalization Object denormalizes plain arrays with nothing inside 3`] = `
Array [
  Immutable.Map {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  true,
]
`;

exports[`ArraySchema denormalization Object denormalizes plain arrays with nothing inside 4`] = `
Array [
  Object {
    "tacos": Array [],
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  true,
]
`;

exports[`ArraySchema denormalization Object denormalizes plain arrays with nothing inside 5`] = `
Array [
  Object {
    "tacos": Array [],
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  true,
]
`;

exports[`ArraySchema denormalization Object denormalizes plain arrays with nothing inside 6`] = `
Array [
  Immutable.Map {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
    "tacos": Immutable.List [],
  },
  true,
  true,
]
`;

exports[`ArraySchema denormalization Object denormalizes plain arrays with plain object inside 1`] = `
Array [
  Object {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  true,
]
`;

exports[`ArraySchema denormalization Object denormalizes plain arrays with plain object inside 2`] = `
Array [
  Object {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  true,
]
`;

exports[`ArraySchema denormalization Object denormalizes plain arrays with plain object inside 3`] = `
Array [
  Immutable.Map {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  true,
]
`;

exports[`ArraySchema denormalization Object denormalizes plain arrays with plain object inside 4`] = `
Array [
  Object {
    "tacos": Array [],
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  true,
]
`;

exports[`ArraySchema denormalization Object denormalizes plain arrays with plain object inside 5`] = `
Array [
  Object {
    "tacos": Array [],
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  true,
]
`;

exports[`ArraySchema denormalization Object denormalizes plain arrays with plain object inside 6`] = `
Array [
  Immutable.Map {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
    "tacos": Immutable.List [],
  },
  true,
  true,
]
`;

exports[`ArraySchema denormalization Object denormalizes should not be found when result array is undefined 1`] = `
Object {
  "results": undefined,
}
`;

exports[`ArraySchema denormalization Object denormalizes should not be found when result array is undefined 2`] = `
Object {
  "results": undefined,
}
`;

exports[`ArraySchema denormalization Object denormalizes with missing entity should have true second value 1`] = `
Array [
  Object {
    "data": Cat {
      "id": "1",
      "name": "Milo",
    },
  },
  Object {
    "data": Cat {
      "id": "2",
      "name": "Jake",
    },
  },
]
`;

exports[`ArraySchema denormalization Object denormalizes with missing entity should have true second value 2`] = `
Array [
  Object {
    "data": Cat {
      "id": "1",
      "name": "Milo",
    },
  },
  Object {
    "data": Cat {
      "id": "2",
      "name": "Jake",
    },
  },
]
`;

exports[`ArraySchema denormalization Object returns the input value if is not an array 1`] = `
Array [
  Taco {
    "fillings": null,
    "id": "123",
  },
  true,
  true,
]
`;

exports[`ArraySchema denormalization Object returns the input value if is not an array 2`] = `
Array [
  Taco {
    "fillings": null,
    "id": "123",
  },
  true,
  true,
]
`;

exports[`ArraySchema normalization Class filters out undefined and null normalized values 1`] = `
Object {
  "entities": Object {
    "User": Object {
      "123": User {
        "id": "123",
      },
    },
  },
  "indexes": Object {},
  "result": Array [
    "123",
  ],
}
`;

exports[`ArraySchema normalization Class normalizes Objects using their values 1`] = `
Object {
  "entities": Object {
    "User": Object {
      "1": User {
        "id": "1",
      },
      "2": User {
        "id": "2",
      },
    },
  },
  "indexes": Object {},
  "result": Array [
    "1",
    "2",
  ],
}
`;

exports[`ArraySchema normalization Class normalizes a single entity 1`] = `
Object {
  "entities": Object {
    "Cats": Object {
      "1": Cats {
        "id": "1",
      },
      "2": Cats {
        "id": "2",
      },
    },
  },
  "indexes": Object {},
  "result": Array [
    "1",
    "2",
  ],
}
`;

exports[`ArraySchema normalization Class normalizes multiple entities 1`] = `
Object {
  "entities": Object {
    "Cats": Object {
      "123": Cats {
        "id": "123",
        "type": "Cat",
      },
      "456": Cats {
        "id": "456",
        "type": "Cat",
      },
    },
    "Person": Object {
      "123": Person {
        "id": "123",
        "type": "people",
      },
    },
  },
  "indexes": Object {},
  "result": Array [
    Object {
      "id": "123",
      "schema": "Cat",
    },
    Object {
      "id": "123",
      "schema": "people",
    },
    Object {
      "id": "789",
      "name": "fido",
    },
    Object {
      "id": "456",
      "schema": "Cat",
    },
  ],
}
`;

exports[`ArraySchema normalization Class normalizes multiple entities 2`] = `
Array [
  Array [
    Object {
      "id": "123",
      "type": "Cat",
    },
    Array [
      Object {
        "id": "123",
        "type": "Cat",
      },
      Object {
        "id": "123",
        "type": "people",
      },
      Object {
        "id": "789",
        "name": "fido",
      },
      Object {
        "id": "456",
        "type": "Cat",
      },
    ],
    undefined,
  ],
  Array [
    Object {
      "id": "123",
      "type": "Cat",
    },
    Array [
      Object {
        "id": "123",
        "type": "Cat",
      },
      Object {
        "id": "123",
        "type": "people",
      },
      Object {
        "id": "789",
        "name": "fido",
      },
      Object {
        "id": "456",
        "type": "Cat",
      },
    ],
    undefined,
  ],
  Array [
    Object {
      "id": "123",
      "type": "people",
    },
    Array [
      Object {
        "id": "123",
        "type": "Cat",
      },
      Object {
        "id": "123",
        "type": "people",
      },
      Object {
        "id": "789",
        "name": "fido",
      },
      Object {
        "id": "456",
        "type": "Cat",
      },
    ],
    undefined,
  ],
  Array [
    Object {
      "id": "123",
      "type": "people",
    },
    Array [
      Object {
        "id": "123",
        "type": "Cat",
      },
      Object {
        "id": "123",
        "type": "people",
      },
      Object {
        "id": "789",
        "name": "fido",
      },
      Object {
        "id": "456",
        "type": "Cat",
      },
    ],
    undefined,
  ],
  Array [
    Object {
      "id": "789",
      "name": "fido",
    },
    Array [
      Object {
        "id": "123",
        "type": "Cat",
      },
      Object {
        "id": "123",
        "type": "people",
      },
      Object {
        "id": "789",
        "name": "fido",
      },
      Object {
        "id": "456",
        "type": "Cat",
      },
    ],
    undefined,
  ],
  Array [
    Object {
      "id": "456",
      "type": "Cat",
    },
    Array [
      Object {
        "id": "123",
        "type": "Cat",
      },
      Object {
        "id": "123",
        "type": "people",
      },
      Object {
        "id": "789",
        "name": "fido",
      },
      Object {
        "id": "456",
        "type": "Cat",
      },
    ],
    undefined,
  ],
  Array [
    Object {
      "id": "456",
      "type": "Cat",
    },
    Array [
      Object {
        "id": "123",
        "type": "Cat",
      },
      Object {
        "id": "123",
        "type": "people",
      },
      Object {
        "id": "789",
        "name": "fido",
      },
      Object {
        "id": "456",
        "type": "Cat",
      },
    ],
    undefined,
  ],
]
`;

exports[`ArraySchema normalization Object normalizes Objects using their values 1`] = `
Object {
  "entities": Object {
    "User": Object {
      "1": User {
        "id": "1",
      },
      "2": User {
        "id": "2",
      },
    },
  },
  "indexes": Object {},
  "result": Array [
    "1",
    "2",
  ],
}
`;

exports[`ArraySchema normalization Object normalizes plain arrays as shorthand for ArraySchema 1`] = `
Object {
  "entities": Object {
    "User": Object {
      "1": User {
        "id": "1",
      },
      "2": User {
        "id": "2",
      },
    },
  },
  "indexes": Object {},
  "result": Array [
    "1",
    "2",
  ],
}
`;

exports[`ArraySchema normalization Object passes its parent to its children when normalizing 1`] = `
Object {
  "entities": Object {
    "Child": Object {
      "4": Child {
        "content": "child",
        "id": 4,
        "parentId": "1",
        "parentKey": "children",
      },
    },
    "Parent": Object {
      "1": Parent {
        "children": Array [
          "4",
        ],
        "content": "parent",
        "id": "1",
      },
    },
  },
  "indexes": Object {},
  "result": "1",
}
`;

exports[`ArraySchema normalization Object should throw a custom error if data loads with json string unexpected value 1`] = `
"Normalizing a string, but this does match schema.

Parsing this input string as JSON worked. This likely indicates fetch function did not parse
the JSON. By default, this only happens if \\"content-type\\" header includes \\"json\\".
See https://resthooks.io/docs/guides/custom-networking for more information

  Schema: [
  {
    \\"name\\": \\"User\\",
    \\"schema\\": {},
    \\"key\\": \\"User\\"
  }
]
  Input: \\"[{\\"id\\":5}]\\""
`;

exports[`ArraySchema normalization Object should throw a custom error if data loads with string unexpected value 1`] = `
"Unexpected input given to normalize. Expected type to be \\"object\\", found \\"string\\".

          Schema: [
  {
    \\"name\\": \\"User\\",
    \\"schema\\": {},
    \\"key\\": \\"User\\"
  }
]
          Input: \\"abc\\""
`;
